@@ -11,10 +11,6 @@ subprojects {
             sourceCompatibility = JavaVersion.VERSION_21
             targetCompatibility = JavaVersion.VERSION_21
         }
-
-        tasks.withType(JavaCompile).configureEach {
-            options.compilerArgs.add('--enable-preview')
-        }
     }
 
     repositories {
